# capnhook

./: .gitignore  LICENSE  meson.build  precompiled.h
hook/: hr.c  hr.h  iobuf.c  iobuf.h  iohook.c  iohook.h  meson.build  peb.c  process.c  table.c
hooklib/: meson.build  serial.c  serial.h  uart.c  uart.h
inject/: debug.c  debug.h  main.c  meson.build  options.c  options.h
iohook/: async.c  async.h  chain.c  chain.h  file.c  file.h  iobuf.c  iohook.c  iohook.h  irp.h  meson.build  socket-io.c  socket-io.h  socket-mgmt.c  socket-mgmt.h  socket.c  socket.h
